<resources>
    <string name="random">random</string>
    <!--Logowanie i rejestracja-->

    <string name="app_name">Medicar</string>
    <string name="signin">Sign In</string>
    <string name="login">Log In</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="dont_have_account">Do not have an account? Sign up here!</string>
    <string name="forgot_password">Forgot the password?</string>
    <string name="register_button">Register now</string>
    <string name="already_have_account">Already have an account? Log in here!</string>
    <string name="title_activity_test">test</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="registration_activity">Register here</string>
    <!--Główne menu-->

    <string name="add_action">Add action</string>
    <string name="payment">Payments</string>
    <string name="switch_to_calendar">Calendar</string>
    <string name="transaction_history">History</string>
    <string name="welcome_user">Welcome, User!</string>
    <string name="total_balance">Total balance</string>
    <!--Nowy wydatek-->
    <string name="title">Title</string>
    <string name="price">Price</string>
    <string name="product_name">Name</string>
    <string name="product_quantity">Quantity</string>
    <string name="product_type">Product type</string>
    <string name="add_expense">Add expense</string>
    <string name="producttype_prompt">Select the type of repair</string>

    <string-array name="producttype_array">
        <item>Food and Beverage</item>
        <item>Clothing and Accessories</item>
        <item>Health and Personal Care</item>
        <item>Home and Garden</item>
        <item>Electronics</item>
        <item>Sports and Outdoor Gear</item>
        <item>Beauty and Grooming</item>
        <item>Travel</item>
        <item>Entertainment</item>
        <item>Education and Training</item>
        <item>Transportation</item>
        <item>Charitable Donations</item>
        <item>Subscriptions</item>
        <item>Office Supplies</item>
        <item>School Supplies</item>
        <item>Financial Services</item>
    </string-array>

    <!--Navbar-->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home_drawer">HomeDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Medicar</string>
    <string name="nav_header_subtitle">created for Student_Startup </string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="nav_logout">Logout</string>
    <string name="nav_preferences">User preferences</string>
    <string name="nav_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="nav_about">About</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>


    <!--preferences-->
    <string name="confirm">Confirm</string>
    <string name="default_currency">PLN</string>
    <string name="defautl_date_format">dd/mm/yyyy</string>
    <string name="set_budget">Set your budget:</string>
    <string name="select_currency">Select currency:</string>
    <string name="reset">Reset</string>
    <string name="select_date_format">Select date format:</string>


    <!--home drawer-->
    <string name="home_drawer_bar">Medicar</string>
    <string name="open_menu">Open menu</string>
    <string name="close_menu">Close menu</string>
    <string name="home_main_menu">Main menu</string>

    <!--payments -->
    <string name="blik">Blik</string>
    <string name="bank">Bank</string>
    <string name="visa">Visa</string>
    <string name="google_pay">Google Pay</string>

</resources>