<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:id="@+id/add_action"
    android:background="@drawable/home_bottom_menu_background"
    android:layout_height="match_parent">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/AutoServiceAppStyle"
        android:text="@string/title" />

    <EditText
        android:id="@+id/titleEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_marginTop="15dp"

        style="@style/AutoServiceAppStyle"
        android:layout_height="wrap_content"
        android:text="@string/price" />

    <EditText
        android:id="@+id/priceEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Spinner
        android:id="@+id/producttype_spinner"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/producttype_array"
        android:prompt="@string/producttype_prompt" />

    <ImageView
        android:id="@+id/dateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:src="@drawable/to_calendar"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_add_expense"
            style="@style/AutoServiceAppStyle"

            android:layout_width="200dp"
            android:layout_height="70dp"

            android:background="@drawable/btn_grad_color"

            android:textSize="17sp"

            android:text="@string/add_expense"
            android:textAppearance="?android:textAppearanceMedium" />
    </LinearLayout>

</LinearLayout>

